# treemark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-poetry.yml  ci.yml
docs/: DEPLOY.md  INSTALL.md  PYCHARM_SETUP.md
examples/: example_output.json  example_output.md
tests/: test_scanner.py
tree_mark/: __init__.py  exceptions.py  logging_config.py  main.py
tree_mark/adapters/filesystem/: archive_scanner.py  scanner.py
tree_mark/adapters/repository/: file_repository.py
tree_mark/adapters/serializers/: json_serializer.py  markdown_serializer.py
tree_mark/api/: server.py
tree_mark/cli/: app.py  file_opener.py  progress.py
tree_mark/core/entities/: tree_node.py
tree_mark/core/interfaces/: scanner_interface.py
tree_mark/core/models/: schemas.py  usecase_result.py
tree_mark/core/usecases/: generate_structure.py
tree_mark/factory/: scanner_factory.py
tree_mark/scripts/: create_from_json.py
tree_mark/utils/: io_helpers.py  timeit.py
